--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,39 @@
-hello world
-<form method="POST">
-    <input name="text">
-    <input type="submit">
-</form>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+
+    <title>Bert Sentiment Analysis</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/floating-labels/">
+
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="static/css/floating-labels.css" rel="stylesheet">
+  </head>
+
+  <body>
+    <form class="form-signin" method="POST">
+      <div class="text-center mb-4">
+        <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">Bert Sentiment Analysis</h1>
+        <p>To get source code visit <a href="https://github.com/ls-da3m0ns/Bert-sentiment-analysis"> Github repo link </a></p>
+        <p>Enter your sentence Below </p>
+      </div>
+
+      <div class="form-label-group" >
+        <input name="text" type="text" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputEmail">Sentence </label>
+      </div>
+
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Predict</button>
+      <p class="mt-5 mb-3 text-muted text-center">&copy; 2019-2020</p>
+    </form>
+  </body>
+</html>
