--- a/templates/outputs.html
+++ b/templates/outputs.html
@@ -1,1 +1,34 @@
-<h1>Prediciton: {{values}}</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+
+    <title>Bert Sentiment Analysis</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/floating-labels/">
+
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="static/css/floating-labels.css" rel="stylesheet">
+  </head>
+
+  <body>
+    <form class="form-signin" method="POST">
+      <div class="text-center mb-4">
+        <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-bold">Bert Sentiment Analysis</h1>
+        <p>To get source code visit <a href="https://github.com/ls-da3m0ns/Bert-sentiment-analysis"> Github repo link </a></p>
+        <p>The probability of you sentence being positive is <b> {{positive}} </b> </p>
+        <p>The probability of you sentence being negative is <b> {{negative}} </b> </p>
+        <p>Time taken to analyze you sentence is <b> {{time_taken}} ms </b> </p>
+      </div>
+      <p class="mt-5 mb-3 text-muted text-center">&copy; 2020-2021</p>
+    </form>
+  </body>
+</html>
