--- a/templates/outputs.html
+++ b/templates/outputs.html
@@ -21,7 +21,7 @@
   <body>
     <form class="form-signin" method="POST">
       <div class="text-center mb-4">
-        <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+        <img class="mb-4" src="static/css/logo.png" alt="" width="120" height="120">
         <h1 class="h3 mb-3 font-weight-bold">Bert Sentiment Analysis</h1>
         <p>To get source code visit <a href="https://github.com/ls-da3m0ns/Bert-sentiment-analysis"> Github repo link </a></p>
         <p>The probability of you sentence being positive is <b> {{positive}} </b> </p>
