--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Deployment of bert sentiment Analysis model>
+    <meta name="author" content="Prashant kumar singh">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
 
     <title>Bert Sentiment Analysis</title>
@@ -21,7 +21,7 @@
   <body>
     <form class="form-signin" method="POST">
       <div class="text-center mb-4">
-        <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+        <img class="mb-4" src="static/css/logo.png" alt="" width="120" height="120">
         <h1 class="h3 mb-3 font-weight-normal">Bert Sentiment Analysis</h1>
         <p>To get source code visit <a href="https://github.com/ls-da3m0ns/Bert-sentiment-analysis"> Github repo link </a></p>
         <p>Enter your sentence Below </p>
